<resources>
    <string name="app_name">DIXIT</string>
    <string name="categorias">Categorías</string>
    <string name="frases">Frases</string>
    <string name="preguntas">Preguntas</string>

    <string name="nueva_categoria">Nueva Categoría</string>
    <string name="detalle_categorias">Categoría: Lista de pictogramas</string>
    <string name="detalle_frases">Detalle de Frase</string>
    <string name="detalle_rutinas">Detalle de Rutina</string>
    <string name="detalle_pregunta">Detalle de Pregunta</string>

    <string name="modificar_pictograma">Modificar pictograma</string>
    <string name="importar_pictogramas">Importar pictogramas</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar">Buscar</string>
    <string name="ingrese_t_tulo_de_la_categor_a">Nueva Categoría</string>
    <string name="agregar_categor_a">Agregar Categoría</string>
    <string name="rutinas">Rutinas</string>
    <string name="sin_elementos">Sin elementos guardados :(</string>
    <string name="txtTitulo">Título</string>
    <string name="nombre_de_rutina">Nombre de Rutina</string>
    <string name="ingrese_nombre_de_pictograma">Ingrese nombre de Pictograma</string>
    <string name="guardar_los_cambios">Guardar los cambios</string>
    <string name="agregar_pictogramas_desde_el_bot_n_inferior">Agregar Pictogramas desde el botón inferior</string>
    <string name="agregar_rutinas_desde_el_bot_n_inferior">Agregar Rutinas desde el botón inferior</string>
    <string name="nombre_de_pictograma">Nombre de pictograma</string>
    <string name="agregar_pictograma">Agregar pictograma</string>
    <string name="agregar_una_nueva_frase">Agregar una nueva frase</string>
    <string name="agregar_una_nueva_categor_a">Agregar una nueva categoría</string>
    <string name="agregar_una_nueva_pregunta">Agregar una nueva pregunta</string>

    <string name="no_hay_pictogramas_disponibles_cre_uno_nuevo_desde_el_men_categor_as">¡No hay pictogramas disponibles!</string>
    <string name="agregar_rutina">Agregar Rutina</string>
    <string name="t_tulo_de_frase">Título de frase</string>
    <string name="pictograma">Pictograma</string>
    <string name="no_hay_frases_creadas">¡No hay Frases guardadas!</string>
    <string name="no_hay_preguntas_creadas">¡No hay Preguntas guardadas!</string>
    <string name="no_hay_categor_as_guardadas">¡No hay Categorías guardadas!</string>
    <string name="pregunta_sin_picto">
    ¡Pregunta incompleta!
    agregar pictogramas
    desde el botón inferior</string>
    <string name="categoria_sin_pictogramas">¡Categoría sin Pictogramas!</string>

    <string name="frase_sin_pictogramas">¡Frase sin Pictogramas!</string>
    <string name="pregunta_sin_pictogramas">¡Pregunta sin Pictogramas!</string>
    <string name="rutina_sin_pictogramas">¡Rutina sin Pictogramas!</string>
    <string name="ingrese_t_tulo_de_la_pregunta">Nueva Pregunta</string>
    <string name="ingrese_t_tulo_de_la_frase">Nueva Frase</string>
    <string name="ingrese_t_tulo">Ingrese título</string>

    <string name="title_activity_splash">Bienvenido a DIXIT</string>

    <string name="hello_world">Hello Square World!</string>
    <string name="titulo_de_frase">Titulo de Frase</string>

    <string name="titulo_de_pregunta">Titulo de Pregunta</string>
    <string name="titulo_de_respuesta">Elija una respuesta:</string>

    <string name="titulo_de_rutina">Titulo de Rutina</string>
    <string name="comunicar">COMUNICAR</string>
    <string name="guardar">Guardar</string>
    <string name="pregunta_txt">Pregunta: %1$s</string>
    <string name="respuesta_txt">Respuestas:</string>
    <string name="pictogramas_de_la_frase">Pictogramas de la Frase</string>
    <string name="elija_los_pictogramas_a_agregar">Buscar pictogramas</string>
    <string name="pictogramas_de_la_rutina">Pictogramas de la Rutina</string>
    <string name="pictogramas_de_la_pregunta">Pictogramas de la Pregunta</string>
    <string name="respuestas">Pictogramas de Respuestas:</string>
    <string name="elija_la_imagen_a_guardar">Elija la imagen a guardar</string>
    <string name="no_hay_rutinas_guardadas">¡No hay Rutinas guardadas!</string>
    <string name="seleccione_el_directorio_de_pictogramas_haciendo_clic_en_el_siguiente_bot_n">
        Seleccione el directorio de pictogramas haciendo clic en el siguiente botón
    </string>
    <string name="seleccionar_im_genes">Seleccionar imágenes</string>
    <string name="cantidad_de_imagenes">Cantidad de imágenes: %1$d</string>
    <string name="abrir_im_genes">Abrir imágenes</string>
    <string name="buscar_im_genes">Buscar imágenes</string>
    <string name="pictogramas">Pictogramas</string>
    <string name="men_principal">Menú Principal</string>
    <string name="inicio">Un puente para comunicarnos.</string>
    <string name="tocar_la_figura_para_cargar_una_imagen">Tocar la figura para cargar una imagen.</string>
    <string name="pictogramas_seleccionados">Pictogramas seleccionados:</string>
</resources>