<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.categorias.CategoriaDetalleFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPictogramaModificar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <EditText
                android:id="@+id/pictograma_modTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:contentDescription="@string/elija_la_imagen_a_guardar"
                android:hint="@string/ingrese_nombre_de_pictograma"
                android:inputType="text"
                android:textSize="@dimen/text_size_normal" />

            <ImageView
                android:id="@+id/imagenPictogramaMod"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@android:drawable/ic_menu_gallery"/>

        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_done_modPictograma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:contentDescription="@string/guardar_los_cambios"
            android:focusable="true"
            android:src="@drawable/ic_done"
            app:borderWidth="1dp" />

    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>