<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:context=".view.preguntas.RespuestaModificarFragment">

    <TextView
        android:id="@+id/txtPictogramasRespuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respuestas"
        android:textColor="@color/primaryTextColor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_topRespuesta"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        tools:listitem="@layout/item_pictograma"
        android:layout_below="@id/txtPictogramasRespuesta">
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchPictogramaRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/elija_los_pictogramas_a_agregar"
        android:iconifiedByDefault="false"
        android:layout_below="@id/rv_topRespuesta"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/searchview_background"
         />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bottomPregunta"
        android:layout_width="match_parent"
        android:layout_below="@id/searchPictogramaRespuesta"
        android:scrollbars="vertical"
        android:layout_height="517dp"
        tools:listitem="@layout/item_pictograma" >
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/tv_sin_pictogramas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="284dp"
            android:gravity="center"
            android:padding="50dp"
            android:text="@string/agregar_pictogramas_desde_el_bot_n_inferior"

            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>
</ScrollView>
