<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.rutinas.RutinaDetalleFragment">

    <TextView
        android:id="@+id/txtTituloRutina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_de_rutina"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaPictogramasRutinaRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_below="@id/txtTituloRutina"
        android:visibility="gone">

    </androidx.recyclerview.widget.RecyclerView>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageErrorRutinaView"
        android:layout_width="@dimen/error_image_size"
        android:layout_height="@dimen/error_image_size"
        android:src="@drawable/ic_baseline_error_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rutina_sin_pictogramas"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="@+id/imageErrorRutinaView"
            app:layout_constraintStart_toStartOf="@+id/imageErrorRutinaView"
            app:layout_constraintTop_toBottomOf="@+id/imageErrorRutinaView" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/agregar_pictograma"
        android:src="@android:drawable/ic_menu_edit"
        app:rippleColor="@color/secondaryDarkColor" />

</RelativeLayout>