<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/grid1"
            android:rowCount="2"
            android:columnCount="2"
            android:padding="5dp"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="3dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:weightSum="10">

                    <ImageView
                        android:id="@+id/imgCategorias"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_weight="8"
                        app:srcCompat="@android:drawable/ic_menu_today" />

                    <TextView
                        android:id="@+id/txtCategorias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/categorias"
                        android:textAlignment="center"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:weightSum="10">

                    <ImageView
                        android:id="@+id/imgFrases"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_weight="8"
                        app:srcCompat="@android:drawable/ic_menu_edit" />

                    <TextView
                        android:id="@+id/txtFrases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frases"
                        android:textAlignment="center"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:weightSum="10">

                    <ImageView
                        android:id="@+id/imgPreguntas"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_weight="8"
                        app:srcCompat="@android:drawable/ic_menu_help" />

                    <TextView
                        android:id="@+id/txtPreguntas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/preguntas"
                        android:textAlignment="center"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    android:weightSum="10">

                    <ImageView
                        android:id="@+id/imgRutinas"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_weight="8"
                        app:srcCompat="@android:drawable/ic_menu_agenda" />

                    <TextView
                        android:id="@+id/txtRutinas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rutinas"
                        android:textAlignment="center"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</LinearLayout>